--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Volkhov:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="/favicon.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon">
   <title>Wildbeast</title>
 </head>
 
@@ -26,12 +26,12 @@
     </header>
     <nav class="sidenav">
       <ul>
-        <li><a href="#"><img src="/img/icones/cervo.svg" alt=""></a></li>
-        <li><a href="#"><img src="/img/icones/leao.svg" alt=""></a></li>
-        <li><a href="#"><img src="/img/icones/cervo.svg" alt=""></a></li>
-        <li><a href="#"><img src="/img/icones/vaca.svg" alt=""></a></li>
-        <li><a href="#"><img src="/img/icones/ovelha.svg" alt=""></a></li>
-        <li><a href="#"><img src="/img/icones/abelha.svg" alt=""></a></li>
+        <li><a href="#"><img src="./img/icones/cervo.svg" alt=""></a></li>
+        <li><a href="#"><img src="./img/icones/leao.svg" alt=""></a></li>
+        <li><a href="#"><img src="./img/icones/gato.svg" alt=""></a></li>
+        <li><a href="#"><img src="./img/icones/vaca.svg" alt=""></a></li>
+        <li><a href="#"><img src="./img/icones/ovelha.svg" alt=""></a></li>
+        <li><a href="#"><img src="./img/icones/abelha.svg" alt=""></a></li>
       </ul>
     </nav>
     <main class="content">
@@ -52,11 +52,11 @@
       <p class="col-wide">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico
 
       </p>
-      <img class="imagem-1" src="/img/wolf1.jpg" alt="wolf 1">
+      <img class="imagem-1" src="./img/wolf1.jpg" alt="wolf 1">
       <p class="destaque">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.
 
       </p>
-      <img class="imagem-2" src="/img/wolf2.jpg" alt="wolf 2">
+      <img class="imagem-2" src="./img/wolf2.jpg" alt="wolf 2">
       <p>O peso e tamanho dos lobos variam muito em todo o mundo, tendendo a aumentar proporcionalmente com a latitude, como previsto pela teoria de Christian Bergmann. Em geral, a altura, medida a partir dos ombros, varia de 60 a 95 centímetros.
 
       </p>
@@ -90,14 +90,14 @@
 
         </p>
       </div>
-      <img class="col-wide imagem-3" src="/img/wolf3.jpg" alt="wolf 3">
+      <img class="col-wide imagem-3" src="./img/wolf3.jpg" alt="wolf 3">
     </main>
     <aside class="anuncios">
       <div class="anuncio-item">
-        <img src="/img/anuncio-1.jpg" alt="anuncio 1">
+        <img src="./img/anuncio-1.jpg" alt="anuncio 1">
       </div>
       <div class="anuncio-item">
-        <img src="/img/anuncio-2.jpg" alt="anuncio 2">
+        <img src="./img/anuncio-2.jpg" alt="anuncio 2">
       </div>
     </aside>
     <footer class="footer">
