--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="estrutura">
     <header class="header">
-      <a href="#" class="logo"><img src="/img/wildbeast.svg" alt="wildbeast"></a>
+      <a href="#" class="logo"><img src="./img/wildbeast.svg" alt="wildbeast"></a>
       <nav>
         <ul>
           <li><a href="">sobre</a></li>
